# botcity-desktop-window-tree-poc

./: .gitignore  .pre-commit-config.yaml  README.md  RESULTS.md  RESULTS_MACOS.md  macos_poc_click_addtask.py  macos_poc_click_each_index.py  macos_poc_click_one.py  macos_poc_reminders.py  macos_poc_todoist.py  poc_click_addtask.py  poc_click_each_index.py  poc_click_one.py  poc_todoist.py  pyproject.toml  windows_poc_click_addtask.py  windows_poc_click_each_index.py
